# claude-skills

./: .gitignore  CLAUDE.md  settings.json
skills/constraints/: SKILL.md  pyproject.toml
skills/constraints/constraints/: __main__.py  classify.py  cli.py  scan.py
skills/gemma-worker/: .env.example  README.md  SKILL.md  pyproject.toml  setup.sh
skills/gemma-worker/_dev/: hook_check.sh
skills/gemma-worker/evals/: README.md  evals.json
skills/gemma-worker/evals/fixtures/clean_module/: no_unused.py
skills/gemma-worker/evals/fixtures/docstring_mismatch/: swap_args.py
skills/gemma-worker/evals/fixtures/incomplete_module/: no_safety_nets.py
skills/gemma-worker/evals/fixtures/multi_file_repo/: api.py  auth.py  storage.py
skills/gemma-worker/evals/fixtures/quadratic_loop/: slow_lookup.py
skills/gemma-worker/gemma_worker/: __main__.py  run.py  supervisor.py
skills/gemma-worker/gemma_worker/client/: _shared.py  base.py
skills/gemma-worker/gemma_worker/client/providers/: anthropic_.py  gemma.py  ollama.py  openai_.py  vllm.py
skills/gemma-worker/gemma_worker/gate/: audit_gate.py  runtime_gate.py
skills/gemma-worker/gemma_worker/playbooks/: _axis_runner.py  _common.py
skills/gemma-worker/gemma_worker/playbooks/critique/: run.py
skills/gemma-worker/gemma_worker/playbooks/critique/axes/: axis-01-unstated-assumption.md  axis-02-reasoning-leap.md  axis-03-alternative-framing.md  axis-04-tradeoff-blindspot.md  axis-05-scope-mismatch.md
skills/gemma-worker/gemma_worker/playbooks/deadcode/: escalation.py  run.py
skills/gemma-worker/gemma_worker/playbooks/devils_advocate/: run.py
skills/gemma-worker/gemma_worker/playbooks/gap/: run.py
skills/gemma-worker/gemma_worker/playbooks/inconsistency/: escalation.py  run.py
skills/gemma-worker/gemma_worker/playbooks/optimization/: run.py
skills/gemma-worker/gemma_worker/playbooks/research/: run.py
skills/gemma-worker/gemma_worker/playbooks/steelman/: run.py
skills/gemma-worker/gemma_worker/playbooks/synthesis/: run.py
skills/gemma-worker/gemma_worker/queue/: worker_pool.py
skills/gemma-worker/gemma_worker/store/: schema.sql  sqlite_store.py
skills/gemma-worker/gemma_worker/tracer/: otel_tracer.py
skills/gemma-worker/tests/: conftest.py  test_smoke.py  test_supervisor_mock.py
skills/gemma-worker/tests/audit/: test_meta_judge.py
skills/gemma-worker/tests/client/: test_client.py  test_span_recording.py
skills/gemma-worker/tests/fixtures/sample_repo/: unused_module.py
skills/gemma-worker/tests/gate/: test_audit_gate.py  test_axis_split.py  test_runtime_gate.py
skills/gemma-worker/tests/playbooks/: test_common.py  test_deadcode.py  test_deadcode_runners.py  test_new_playbooks.py  test_other_playbooks.py
skills/gemma-worker/tests/store/: test_store.py
skills/gemma-worker/tests/tracer/: test_tracer.py
skills/gemma-worker/tests/worker_queue/: test_pool.py
skills/loop/: DESIGN.md  SKILL.md  pyproject.toml
skills/loop/loop/: __main__.py  bootstrap.py  cli.py  synthesize.py
skills/problems/: SKILL.md  pyproject.toml
skills/problems/problems/: __main__.py  analyze.py  cli.py  consolidate.py  extract.py  render.py  verify.py
skills/progress/: SKILL.md  pyproject.toml
skills/progress/progress/: __main__.py  classify.py  cli.py  scan.py
(+349 files in other folders)
