[project]
name = "constraints"
version = "0.1.0"
description = "Escalation/blocking-constraint detector — links problems to external waiters (client/external review) via escalation packages and MTG transcripts."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "improver",
]

[tool.uv.sources]
improver = { path = "../../lib/improver", editable = true }

[project.scripts]
constraints = "constraints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["constraints"]
