[project]
name = "gemma-worker"
version = "0.1.0"
description = "Provider-agnostic LLM worker orchestrator skill"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.6,<0.7",
  "langgraph-checkpoint-sqlite>=2.0",
  "openai>=1.50,<3",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "pydantic>=2.8,<3",
  "tenacity>=9.0",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-api>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[project.scripts]
gemma-worker = "gemma_worker.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemma_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: requires live WORKER_LLM_* endpoint",
]
