[project]
name = "loop"
version = "0.2.0"
description = "Self-improvement loop playbook — Claude Code orchestrates problems + gemma-worker; this CLI only bootstraps and synthesizes"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "improver",
]

[tool.uv.sources]
improver = { path = "../../lib/improver", editable = true }

[project.scripts]
loop = "loop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop"]
