[project]
name = "problems"
version = "0.1.0"
description = "Per-problem timeline extractor (4-gemma pipeline: extract / consolidate / verify / analyze)"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "improver",
]

[tool.uv.sources]
improver = { path = "../../lib/improver", editable = true }

[project.scripts]
problems = "problems.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["problems"]
