[project]
name = "progress"
version = "0.1.0"
description = "Granular progress classifier — done/undone/dropped/superseded/pending_escalation per problem, using git log + artifact dirs + doc completion-language as oracles."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "improver",
]

[tool.uv.sources]
improver = { path = "../../lib/improver", editable = true }

[project.scripts]
progress = "progress.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["progress"]
